<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_appbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/kfu_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/iv_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_text_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white_little_blue"
                android:paddingVertical="20dp"
                android:paddingHorizontal="20dp"
                android:text="@string/entering_main_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/blok_kazan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="#EBEFFB"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_main">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_light_transpanent"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/entering_kazan"
                    android:textAlignment="center"
                    android:textColor="@color/kfu_blue"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20sp"
                    android:paddingEnd="20dp"
                    android:text="@string/secretary_kazan"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20sp"
                    android:textIsSelectable="true"
                    android:paddingBottom="20dp"
                    android:text="@string/contacts_kazan"
                    android:textColor="@color/purple_dark"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_light_transpanent"
                    android:paddingStart="20dp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20dp"
                    android:text="@string/address_kazan"
                    android:textColor="#000004"
                    android:textSize="24sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_vk"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/vk_logo"
                app:layout_constraintTop_toBottomOf="@id/blok_kazan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_tg"
                android:layout_marginTop="20dp"

                >
            </ImageView>

            <ImageView
                android:id="@+id/iv_tg_chat"
                android:layout_width="66dp"
                android:layout_height="66dp"
                app:layout_constraintStart_toEndOf="@id/iv_tg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blok_kazan"
                android:layout_marginTop="24dp"
                android:src="@drawable/tg_chat_logo"
                >
            </ImageView>

            <ImageView
                android:id="@+id/iv_tg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toEndOf="@id/iv_vk"
                app:layout_constraintEnd_toStartOf="@+id/iv_tg_chat"
                android:src="@drawable/tg_logo"
                app:layout_constraintTop_toBottomOf="@id/blok_kazan"
                >
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vk_text_kazan"
                app:layout_constraintTop_toBottomOf="@id/iv_vk"
                app:layout_constraintStart_toStartOf="@id/iv_vk"
                app:layout_constraintEnd_toEndOf="@id/iv_vk"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:id="@+id/tv_vk"
                android:textColor="@color/dark_gray">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tg_text_kazan"
                app:layout_constraintTop_toBottomOf="@id/iv_tg"
                app:layout_constraintStart_toStartOf="@id/iv_tg"
                app:layout_constraintEnd_toEndOf="@id/iv_tg"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:id="@+id/tv_tg"
                android:textColor="@color/dark_gray">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tg_chat_text_kazan"
                app:layout_constraintEnd_toEndOf="@id/iv_tg_chat"
                app:layout_constraintStart_toStartOf="@id/iv_tg_chat"
                android:id="@+id/tv_tg_chat"
                app:layout_constraintTop_toBottomOf="@+id/iv_tg_chat"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/dark_gray">
            </TextView>


            <LinearLayout android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blok_elabuga"
                android:backgroundTint="#EBEFFB"
                android:background="@color/white"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_tg"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/entering_elabuga"
                    android:paddingStart="20dp"
                    android:textAlignment="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/kfu_blue"
                    android:background="@color/purple_light_transpanent"
                    >
                </TextView>

                <TextView
                    android:paddingTop="20sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secretary_elabuga"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    >
                </TextView>

                <TextView
                    android:paddingTop="20sp"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts_elabuga"
                    android:textColor="@color/purple_dark"
                    android:textIsSelectable="true"
                    android:paddingBottom="20dp"
                    android:textSize="24sp"
                    >
                </TextView>

                <TextView
                    android:paddingTop="20sp"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_light_transpanent"
                    android:paddingBottom="20dp"
                    android:text="@string/address_elabuga"
                    android:textColor="#000004"
                    android:textSize="24sp"
                    >
                </TextView>
            </LinearLayout>


            <LinearLayout android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blok_chelni"
                android:backgroundTint="#EBEFFB"
                android:background="@color/white"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/blok_elabuga"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/entering_chelni"
                    android:paddingStart="20dp"
                    android:textAlignment="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/kfu_blue"
                    android:background="@color/purple_light_transpanent"
                    >
                </TextView>

                <TextView
                    android:paddingTop="20sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secretary_chelni"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    >
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="20sp"
                    android:text="@string/contacts_chelni"
                    android:textColor="@color/purple_dark"
                    android:textIsSelectable="true"
                    android:paddingBottom="20dp"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:paddingTop="20sp"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/purple_light_transpanent"
                    android:text="@string/address_chelni"
                    android:textColor="#000004"
                    android:textSize="24sp"
                    >
                </TextView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

