<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_inputs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/gray_background"
        android:minWidth="340dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kfu_blue_dark"
            android:textSize="24sp"

            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sure"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="40dp"
            android:id="@+id/btn_submit"
            android:background="@color/blue_light"
            android:layout_width="120dp"
            android:textColor="@color/kfu_blue_dark"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:text="@string/yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="40dp"
            android:id="@+id/btn_cancel"
            android:background="@color/kfu_blue"
            android:textColor="@color/blue_light"
            android:layout_width="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/no"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>