<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/kfu_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/iv_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_form">
        <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/statement_maintext"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp"
        android:textAlignment="center"
        android:textColor="@color/kfu_blue_dark"
        android:background="@color/purple_light_transpanent">
        </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp"
        android:text="@string/statement_fio"
        android:textColor="@color/kfu_blue_dark"
        android:id="@+id/tv_fio"
        app:layout_constraintTop_toBottomOf="@id/warning"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:id="@+id/et_fio"
        android:layout_width="match_parent"
        android:paddingHorizontal="28dp"
        android:hint="Петров Петр Петрович"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fio">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp"
        android:text="@string/statement_institutes"
        android:id="@+id/tv_institute"
        android:textColor="@color/kfu_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/et_fio"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:id="@+id/et_institute"
        android:layout_width="match_parent"
        android:paddingHorizontal="28dp"
        android:hint="ИТИС"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_institute">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="28dp"
        android:textColor="@color/kfu_blue_dark"
        android:paddingVertical="20dp"
        android:text="@string/statement_email"
        android:id="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/et_institute"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:paddingHorizontal="28dp"
        android:hint="myEmail@mail.com"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/kfu_blue_dark"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp"
        android:text="@string/statement_type"
        android:id="@+id/tv_type"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rb_type"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_type">
        <RadioButton android:id="@+id/rb_treb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="По месту требования"
            />
        <RadioButton android:id="@+id/rb_pf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Пенсионный фонд"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/kfu_blue_dark"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp"
        android:text="@string/statement_personaldata"
        android:id="@+id/tv_agreement"
        app:layout_constraintTop_toBottomOf="@id/rb_type"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <CheckBox
        android:id="@+id/cb_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_agreement"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Да"
        android:layout_marginHorizontal="28dp">
    </CheckBox>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kfu_blue"
        android:text="Отправить"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/cb_agreement"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp">
    </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>